	- Made search functions & keys more like Pico.  Added goto line from  
	  search and replace function, changed wording to "No Replace" instead
	  of "To Search", "To Replace" to simply "Replace", and changed to
	  Pico's keystroke by default, ^R. Affects search_init(),
	  do_search() in search.c, globals in nano.h and
	  shortcut_init() in global.c.
	- changed 'sprintf' calls to safer 'snprintf'
- nano.c:
	- Removed dual alt_speller variables, oops! (Rocco Corsi)
	- Removed unnecessary do_oldspell function (Rocco Corsi).  Added
	  SMALL_NANO #ifdef around actual spell function.
- de.po:
	- Revised translations by floki@bigfoot.com.
- fi.po:
	- Finnish translation by pauli.virtanen@saunalahti.fi.
- winio.c:
  do_yesno(), nanogetstr():
	- Removed now unnecessary raw/cbreak combos.
	- Removed gettext calls from "Y(es)", "N(o)", "A(ll)" and "^C", till
	  we decide if those keybindings should be translated. (Jordi)
  clear_bottomwin():
	- Removed wrefresh(edit) call.

nano-0.9.11 - 06/20/2000
- New flag "-T" or "--tabsize" to specify how to display tab widths.
  Affects main() in nano.c, strlenpt(), xpt() and actual_x() (et al) in 
  winio.c, and nano.h.  Many harcoded "8"s have been changed to the 
  TABSIZE int.  Added changes to nano.1 and nano.1.html.
- id.po:
	- Indonesian translation by Tedi Heriyanto.
- es.po:
	- Updated translation (Jordi Mallach).
- winio.c
        - Rewrite of display functions to correct the display problems 
	  we had been seeing. Affects: add_marked_sameline, edit_add,
	  and many others. (Rob Siemborski)
	- totsize fixes (Rob Siemborski)
  total_refresh():
	- Cut dispaly_main_list call, as this function is only supposed to refresh
	  what's already on the screen, not go through the process of adding the
	  text again.
- cut.c:
	- totsize fixes (Rob Siemborski)
- nano.c:
	- experimental do_wrap and check_wrap (Adam Rogoyski)
	- Removed editwineob, as it was redundant for (editwinrows - 1).