@@ -134,6 +134,25 @@ void page_up_center(void)
 
 }
 
+int page_up(void)
+{
+    wrap_reset();
+    current_x = 0;
+    placewewant = 0;
+
+    if (current == fileage)
+	return 0;
+
+    current_y = 0;
+    edit_update_bot(edittop);
+    update_cursor();
+
+    UNSET(KEEP_CUTBUFFER);
+    check_statblank();
+    return 1;
+}
+
+
 int do_up(void)
 {
     wrap_reset();
